# k3d-demo-be

./: Dockerfile  Dockerfile.prod  docker-compose.yaml  justfile  pyproject.toml
k3d_demo_be/: main.py
