[tool.poetry]
name = "k3d-demo-be"
version = "0.1.0"
description = ""
authors = ["Schwannden-Kuo <Schwannden.Kuo@dell.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
